# trading-system

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
api/: config.py  main.py  schemas.py  services.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260512_0001_create_market_data_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: pipeline.py  predictions.py  router.py  stocks.py
backend/app/core/: config.py  paths.py
backend/app/db/: session.py
backend/app/models/: __init__.py  schemas.py  tables.py
backend/app/scripts/: __init__.py  ingest.py
backend/app/services/: ingestion.py  pipeline.py
data_africa/: backtest_results.csv  live_predictions.json  model_metadata.json  model_production.txt  signal_check.csv
data_eu/: backtest_results.csv  live_predictions.json  model_metadata.json  model_production.txt  signal_check.csv
data_ghana/: gse_fundamentals.csv  gse_scored.csv  gse_scraped_raw.csv  latest_recommendation.json
frontend/: .gitignore  biome.json  next.config.ts  package-lock.json  package.json
ghana/: config.py  diagnose_history.py  diagnose_scrape.py  fundamental_scraper.py  portfolio.py  scorer.py  scraper.py
research/: diagnose.py  dividend_pipeline.py  latest_picks.csv
shared/: __init__.py
swing/: backtest.py  config.py  diagnose_backtest.py  features.py  ingest.py  labels.py  predict_live.py  signal_check.py  train.py  train_production.py  universe.py
swing_africa/: backtest.py  config.py  features.py  ingest.py  labels.py  predict_live.py  (+5 more)
(+54 files in other folders)
