[project]
name = "trading-system-backend"
version = "0.1.0"
description = "FastAPI backend for the trading system."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
    "yfinance>=0.2",
]

[tool.uv]
package = false
